--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/cloudinary": "^1.0.3",
+    "@tailwindcss/forms": "^0.3.4",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
